[package]
name = "pex-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.2.1"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.32.0", features = ["full"] }
